--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,14 +200,13 @@ jobs:
       unreal-version: ${{ matrix.unreal }}
 
   integration-test-android:
-    needs: [test-android]
     name: Android UE ${{ matrix.unreal }}
     secrets: inherit
     strategy:
       fail-fast: false
       matrix:
         # Starting with UE 5.4-5.6 for faster iteration
-        unreal: ['5.4', '5.5', '5.6']
+        unreal: ['5.4']
     uses: ./.github/workflows/integration-test-android.yml
     with:
       unreal-version: ${{ matrix.unreal }}
