--- a/.github/workflows/integration-test-android.yml
+++ b/.github/workflows/integration-test-android.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           echo "Downloaded build contents:"
           ls -lah sample-build/
-          echo "Using x64 APK for emulator testing"
+          echo "Using APK for SauceLabs real device testing"
 
       - name: Install Pester
         shell: pwsh
@@ -43,197 +43,31 @@ jobs:
           mkdir build
           cmake -B build -S .
 
-      - name: Upload APK to SauceLabs Storage
-        id: upload_apk
+      - name: Run integration tests
+        id: run-integration-tests
+        shell: pwsh
+        env:
+          SENTRY_UNREAL_TEST_DSN: ${{ secrets.SENTRY_UNREAL_TEST_DSN }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_API_TOKEN }}
+          UNREAL_VERSION: ${{ inputs.unreal-version }}
         run: |
-          sudo apt-get install -y jq
-
-          APK=$(ls sample-build/*.apk | head -n1)
-          echo "Uploading: $APK"
-
-          RESPONSE=$(curl -u "$SAUCE_USERNAME:$SAUCE_ACCESS_KEY" \
-            -X POST "https://api.${SAUCE_REGION}.saucelabs.com/v1/storage/upload" \
-            -F "payload=@${APK}" \
-            -F "name=$(basename "$APK")")
-
-          echo "Upload Response: $RESPONSE"
-          STORAGE_ID=$(echo "$RESPONSE" | jq -r '.item.id')
-
-          echo "storage_id=$STORAGE_ID" >> $GITHUB_OUTPUT
-
-      - name: Start UE5 test on real device
-        id: start_session
-        run: |
-          REQUEST=$(cat <<EOF
-          {
-            "capabilities": {
-              "alwaysMatch": {
-                "platformName": "Android",
-                "appium:app": "storage:${{ steps.upload_apk.outputs.storage_id }}",
-                "appium:deviceName": "Samsung_Galaxy_S23_FE_free",
-                "appium:automationName": "UiAutomator2",
-                "appium:noReset": true,
-                "appium:autoLaunch": false,
-                "sauce:options": {
-                  "name": "${{ inputs.unreal-version }} Android Integration Test",
-                  "appiumVersion": "latest"
-                }
-              }
-            }
+          # Find the APK file
+          $apkPath = Get-ChildItem -Path "${{ github.workspace }}/sample-build" -Filter "*.apk" | Select-Object -First 1
+          if (-not $apkPath) {
+            throw "No APK file found in sample-build directory"
           }
-          EOF
-          )
 
-          echo "Sending Appium session request..."
-          echo "$REQUEST"
+          Write-Host "Found APK: $($apkPath.Name)"
+          $env:SENTRY_UNREAL_TEST_APP_PATH = $apkPath.FullName
 
-          RESPONSE=$(curl -sS -w "\nHTTP_CODE:%{http_code}" \
-            -u "$SAUCE_USERNAME:$SAUCE_ACCESS_KEY" \
-            -X POST "https://ondemand.eu-central-1.saucelabs.com/wd/hub/session" \
-            -H "Content-Type: application/json" \
-            -d "$REQUEST")
-
-          echo "Session Response: $RESPONSE"
-
-          SESSION_ID=$(echo "$RESPONSE" | grep -v "HTTP_CODE" | jq -r '.value.sessionId // .sessionId')
-          echo "Extracted session_id: $SESSION_ID"
-          echo "session_id=$SESSION_ID" >> $GITHUB_OUTPUT
-
-      - name: First launch (crash capture)
-        run: |
-          SESSION_ID="${{ steps.start_session.outputs.session_id }}"
-          
-          RESPONSE=$(curl -sSL -w "\nHTTP:%{http_code}" \
-            -u "$SAUCE_USERNAME:$SAUCE_ACCESS_KEY" \
-            -X POST "https://ondemand.eu-central-1.saucelabs.com/wd/hub/session/$SESSION_ID/appium/device/start_activity" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "appPackage": "io.sentry.unreal.sample",
-              "appActivity": "com.epicgames.unreal.GameActivity",
-              "appWaitActivity": "*",
-              "intentAction": "android.intent.action.MAIN",
-              "intentCategory": "android.intent.category.LAUNCHER",
-              "optionalIntentArguments": "-e cmdline '-crash-capture'"
-            }')
-          echo "Launch response: $RESPONSE"
-
-      - name: Wait for app to finish (first run)
-        run: |
-          SESSION_ID="${{ steps.start_session.outputs.session_id }}"
-          
-          echo "Waiting for app to finish..."
-          MAX_WAIT=20  # Max wait time in seconds
-          POLL_INTERVAL=2
-          ELAPSED=0
-          
-          while [ $ELAPSED -lt $MAX_WAIT ]; do
-            STATE=$(curl -sSL \
-              -u "$SAUCE_USERNAME:$SAUCE_ACCESS_KEY" \
-              -X POST "https://ondemand.eu-central-1.saucelabs.com/wd/hub/session/$SESSION_ID/execute/sync" \
-              -H "Content-Type: application/json" \
-              -d '{"script": "mobile: queryAppState", "args": [{"appId": "io.sentry.unreal.sample"}]}' \
-              | jq -r '.value')
-            
-            echo "App state: $STATE (elapsed: ${ELAPSED}s)"
-            
-            # State 1 = not running, 0 = not installed
-            if [ "$STATE" = "1" ] || [ "$STATE" = "0" ]; then
-              echo "App finished/crashed"
-              break
-            fi
-            
-            sleep $POLL_INTERVAL
-            ELAPSED=$((ELAPSED + POLL_INTERVAL))
-          done
-          
-          if [ $ELAPSED -ge $MAX_WAIT ]; then
-            echo "Timeout waiting for app to finish"
-          fi
-
-      - name: Get first run logs
-        run: |
-          SESSION_ID="${{ steps.start_session.outputs.session_id }}"
-          curl -sS -u "$SAUCE_USERNAME:$SAUCE_ACCESS_KEY" \
-            -X POST "https://ondemand.eu-central-1.saucelabs.com/wd/hub/session/$SESSION_ID/log" \
-            -H "Content-Type: application/json" \
-            -d '{"type": "logcat"}' \
-            -o first_run_logs.json
-
-      - name: Second launch (message capture)
-        run: |
-          SESSION_ID="${{ steps.start_session.outputs.session_id }}"
-          
-          RESPONSE=$(curl -sSL -w "\nHTTP:%{http_code}" \
-            -u "$SAUCE_USERNAME:$SAUCE_ACCESS_KEY" \
-            -X POST "https://ondemand.eu-central-1.saucelabs.com/wd/hub/session/$SESSION_ID/appium/device/start_activity" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "appPackage": "io.sentry.unreal.sample",
-              "appActivity": "com.epicgames.unreal.GameActivity",
-              "appWaitActivity": "*",
-              "intentAction": "android.intent.action.MAIN",
-              "intentCategory": "android.intent.category.LAUNCHER",
-              "optionalIntentArguments": "-e cmdline '-message-capture'"
-            }')
-          echo "Launch response: $RESPONSE"
-
-      - name: Wait for app to finish (second run)
-        run: |
-          SESSION_ID="${{ steps.start_session.outputs.session_id }}"
-          
-          echo "Waiting for app to finish..."
-          MAX_WAIT=20  # Max wait time in seconds
-          POLL_INTERVAL=2
-          ELAPSED=0
-          
-          while [ $ELAPSED -lt $MAX_WAIT ]; do
-            STATE=$(curl -sSL \
-              -u "$SAUCE_USERNAME:$SAUCE_ACCESS_KEY" \
-              -X POST "https://ondemand.eu-central-1.saucelabs.com/wd/hub/session/$SESSION_ID/execute/sync" \
-              -H "Content-Type: application/json" \
-              -d '{"script": "mobile: queryAppState", "args": [{"appId": "io.sentry.unreal.sample"}]}' \
-              | jq -r '.value')
-            
-            echo "App state: $STATE (elapsed: ${ELAPSED}s)"
-            
-            # State 1 = not running, 0 = not installed
-            if [ "$STATE" = "1" ] || [ "$STATE" = "0" ]; then
-              echo "App finished/crashed"
-              break
-            fi
-            
-            sleep $POLL_INTERVAL
-            ELAPSED=$((ELAPSED + POLL_INTERVAL))
-          done
-          
-          if [ $ELAPSED -ge $MAX_WAIT ]; then
-            echo "Timeout waiting for app to finish"
-          fi
-
-      - name: Get second run logs
-        run: |
-          SESSION_ID="${{ steps.start_session.outputs.session_id }}"
-          curl -sS -u "$SAUCE_USERNAME:$SAUCE_ACCESS_KEY" \
-            -X POST "https://ondemand.eu-central-1.saucelabs.com/wd/hub/session/$SESSION_ID/log" \
-            -H "Content-Type: application/json" \
-            -d '{"type": "logcat"}' \
-            -o second_run_logs.json
-
-      - name: End session
-        if: always()
-        run: |
-          SESSION_ID="${{ steps.start_session.outputs.session_id }}"
-          if [ -n "$SESSION_ID" ] && [ "$SESSION_ID" != "null" ]; then
-            curl -sS -u "$SAUCE_USERNAME:$SAUCE_ACCESS_KEY" \
-              -X DELETE "https://ondemand.eu-central-1.saucelabs.com/wd/hub/session/$SESSION_ID"
-          fi
+          cd integration-test
+          Invoke-Pester Integration.Tests.Android.SauceLabs.ps1 -CI
 
       - name: Upload integration test output
         if: ${{ always() }}
         uses: actions/upload-artifact@v4
         with:
-          name: UE ${{ inputs.unreal-version }} device logs (Android)
+          name: UE ${{ inputs.unreal-version }} integration test output (Android)
           path: |
-            first_run_logs.json
-            second_run_logs.json
+            integration-test/output/
           retention-days: 14
