--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -205,8 +205,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # Starting with UE 5.4-5.6 for faster iteration
-        unreal: ['5.4']
+        unreal: ['5.4', '5.5', '5.6', '5.7']
     uses: ./.github/workflows/integration-test-android.yml
     with:
       unreal-version: ${{ matrix.unreal }}
