--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -205,6 +205,7 @@ jobs:
     secrets: inherit
     strategy:
       fail-fast: false
+      max-parallel: 2
       matrix:
         unreal: ['5.4', '5.5', '5.6', '5.7']
     uses: ./.github/workflows/integration-test-android.yml
