--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,3 +198,16 @@ jobs:
     uses: ./.github/workflows/integration-test-windows.yml
     with:
       unreal-version: ${{ matrix.unreal }}
+
+  integration-test-android:
+    needs: [test-android]
+    name: Android UE ${{ matrix.unreal }}
+    secrets: inherit
+    strategy:
+      fail-fast: false
+      max-parallel: 1
+      matrix:
+        unreal: ['5.4', '5.5', '5.6', '5.7']
+    uses: ./.github/workflows/integration-test-android.yml
+    with:
+      unreal-version: ${{ matrix.unreal }}
