--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,12 @@ name: package-plugin-workflow
 
 on:
   push:
+    branches:
+      - main
+      - release/*
+  pull_request:
+    paths-ignore:
+      - "**.md"
 
 jobs:
   android-sdk:
