--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -96,7 +96,7 @@ jobs:
         with:
           name: ${{ github.sha }}
 
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v2
         with:
           path: checkout
           submodules: recursive
