--- a/.github/workflows/integration-test-android.yml
+++ b/.github/workflows/integration-test-android.yml
@@ -19,7 +19,7 @@ jobs:
       SAUCE_SESSION_NAME: UE ${{ inputs.unreal-version }} Android Integration Test
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v2
         with:
           submodules: recursive
 
