--- a/.github/workflows/sdk-build.yml
+++ b/.github/workflows/sdk-build.yml
@@ -32,7 +32,7 @@ jobs:
           apt-get -y install git
           git config --global --add safe.directory $(pwd)
 
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v2
 
       - name: Select submodule
         id: env
