fix: Use correct action version SHAs (restore original versions)

--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -105,7 +105,7 @@ jobs:
         with:
           name: ${{ github.sha }}
 
-      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4 # v2
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4 # v4 # v2
         with:
           path: checkout
           submodules: recursive
