--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -96,7 +96,7 @@ jobs:
         with:
           name: ${{ github.sha }}
 
-      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4 # v4 # v2
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
           path: checkout
           submodules: recursive
