--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,10 @@ on:
     paths-ignore:
       - "**.md"
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   android-sdk:
     uses: ./.github/workflows/sdk-build.yml
