--- a/.github/workflows/integration-test-android.yml
+++ b/.github/workflows/integration-test-android.yml
@@ -19,7 +19,7 @@ jobs:
       SAUCE_SESSION_NAME: UE ${{ inputs.unreal-version }} Android Integration Test
 
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
