--- a/.github/workflows/ue-docker-windows.yml
+++ b/.github/workflows/ue-docker-windows.yml
@@ -42,7 +42,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4
 
       # Building docker images for newer UE versions may require extra disk space
       - name: Clean up disk space before Docker build
