Fix formatting in Android build script

--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -187,7 +187,7 @@ jobs:
             -project=/workspace/checkout/sample/SentryPlayground.uproject \
             -archivedirectory=/workspace/checkout/sample/Builds \
             -platform=Android \
-            -distribution
+            -distribution \
             -clientconfig=Shipping \
             -nop4 \
             -cook \
