--- a/sample/Config/DefaultEngine.ini
+++ b/sample/Config/DefaultEngine.ini
@@ -233,6 +233,7 @@ bGeneratedSYMBundle=True
 CrashReporterUrl="https://o447951.ingest.sentry.io/api/6253052/unreal/93c7a68867db43539980de54f09b139a/"
 Dsn="https://93c7a68867db43539980de54f09b139a@o447951.ingest.sentry.io/6253052"
 IncludeSources=True
+UploadSymbolsAutomatically=True
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
 BundleIdentifier=io.sentry.unreal.sample
