--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -24,7 +24,7 @@ jobs:
     uses: getsentry/github-workflows/.github/workflows/updater.yml@v2
     with:
       path: modules/sentry-java
-      name: Java SDK (Android)
+      name: Java SDK
     secrets:
       api-token: ${{ secrets.CI_DEPLOY_KEY }}
 
@@ -32,7 +32,7 @@ jobs:
     uses: getsentry/github-workflows/.github/workflows/updater.yml@v2
     with:
       path: modules/sentry-cocoa.properties
-      name: Cocoa SDK (iOS and Mac)
+      name: Cocoa SDK
     secrets:
       api-token: ${{ secrets.CI_DEPLOY_KEY }}
 
