--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -125,6 +125,8 @@ jobs:
             -CrashForUAT `
             -unattended `
             -NoLogTimes `
+            -NoSplash `
+            -NullRHI `
             -buildmachine
           $output | Write-Host
           if ($output | Select-String "Success - 0 error\(s\), 0 warning\(s\)") {
