--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,8 +62,15 @@ jobs:
       runsOn: ubuntu-latest
       runtimeId: linux-x64
 
+  crash-reporter-linux-arm64:
+    uses: ./.github/workflows/crash-reporter-build.yml
+    with:
+      target: LinuxArm64
+      runsOn: ubuntu-latest
+      runtimeId: linux-arm64
+
   package-preparation:
-    needs: [android-sdk, ios-sdk, macos-sdk, linux-sdk, linux-arm64-sdk, windows-sdk, crash-reporter-win64, crash-reporter-linux]
+    needs: [android-sdk, ios-sdk, macos-sdk, linux-sdk, linux-arm64-sdk, windows-sdk, crash-reporter-win64, crash-reporter-linux, crash-reporter-linux-arm64]
     name: Package
     runs-on: ubuntu-latest
     steps:
@@ -116,6 +123,11 @@ jobs:
           name: CrashReporter-Linux
           path: plugin-dev/Source/ThirdParty/Linux/bin
 
+      - uses: actions/download-artifact@v4
+        with:
+          name: CrashReporter-LinuxArm64
+          path: plugin-dev/Source/ThirdParty/LinuxArm64/bin
+
       # Workaround for https://github.com/actions/download-artifact/issues/14
       # Adding execute permission for crashpad before preparing final packages
       # allows to avoid issues with plugin initialization on Unix-based systems.
@@ -125,6 +137,7 @@ jobs:
           chmod +x plugin-dev/Source/ThirdParty/Linux/bin/crashpad_handler
           chmod +x plugin-dev/Source/ThirdParty/Linux/bin/Sentry.CrashReporter
           chmod +x plugin-dev/Source/ThirdParty/LinuxArm64/bin/crashpad_handler
+          chmod +x plugin-dev/Source/ThirdParty/LinuxArm64/bin/Sentry.CrashReporter
 
       - name: Prepare Sentry packages for release
         shell: pwsh
